--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,9 @@
-<h1><%= @student.to_s %></h1>
+<h1><%=@student.first_name%></h1>
+<h1><%=@student.last_name%></h1>
+
+<% if @student.active == false%>
+    <h3>"This student is currently inactive."</h3>
+<%elsif%>
+    <h3>"This student is currently active."</h3>
+<%end%>
+
